tests/global/t5958.nim
discard """
  errormsg: "undeclared identifier: 'a'"
  line: 9
"""

static:
  var a = 1

echo a
